--- a/Exercise1/index.html
+++ b/Exercise1/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Appliance Energy Consumption</title>
-    
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
     <nav>
-        <div class="logo">EnergyLogo</div> <ul class="menu">
+        <div class="logo">
+            <img src="assets/PowerIcon.png" alt="Power Logo">
+        </div>
+         <ul class="menu">
             <li><a href="#" id="btn-home" class="active">Home</a></li>
             <li><a href="#" id="btn-tv">Televisions</a></li>
             <li><a href="#" id="btn-about">About Us</a></li>
@@ -34,7 +36,11 @@
     </section>
 
     <footer>
-        <p>&copy; 2026 [Tên Của Bạn]. GenAI Acknowledgement: Code guided by Gemini.</p>
+        <p>&copy; 2026 Nguyen Minh Kiet. All rights reserved.</p>
+        <p style="font-size: 0.8em; color: #666;">
+            GenAI Acknowledgement: This website was built with the guidance of Gemini AI 
+            (Google) for structure planning and code explanation.
+        </p>
     </footer>
 
     <script src="./js/script.js"></script>
