--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <h1>📂 COS30045 - Data Visualisation Portfolio</h1>
-    <p>Student: <strong>Nguyen Van A</strong> (Sửa tên bạn ở đây)</p>
+    <p>Student: <strong>Nguyen Minh Kiet</strong></p>
     <p>Welcome to my assignment repository. Click below to view completed exercises.</p>
 
     <h2>Lab 1</h2>
