--- a/lab1/exercise0.2/index.html
+++ b/lab1/exercise0.2/index.html
@@ -93,12 +93,24 @@
         </section>
 
         <section id="about" class="page-section hidden">
-            <div class="card profile-card">
-                <div class="profile-icon"><i class="fa-solid fa-user-graduate"></i></div>
-                <h1>About Me</h1>
-                <p><strong>Name:</strong> Nguyen Minh Kiet</p>
-                <p><strong>Student ID:</strong> 104761301</p>
-                <p><strong>Course:</strong> COS30045 - Data Visualisation</p>
+            <div class="card">
+                <div style="text-align: center; font-size: 3rem; color: #2ecc71; margin-bottom: 1rem;">
+                    <i class="fa-solid fa-leaf"></i>
+                </div>
+
+                <h1 style="text-align: center; color: #2c3e50;">About Appliance Energy</h1>
+                <hr style="border: 0; border-top: 1px solid #eee; margin: 20px 0;">
+
+                <p>
+                    <strong>Appliance Energy</strong> is a dedicated platform designed to help Australian households understand and reduce their electricity consumption. 
+                    With rising energy costs and environmental concerns, making informed choices about home appliances has never been more critical.
+                </p>
+
+
+
+                <p style="margin-top: 30px; text-align: center; font-style: italic; color: #7f8c8d;">
+                    "Empowering consumers for a greener future."
+                </p>
             </div>
         </section>
 
