Update link for lab2

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
     <h2>Lab 1</h2>
     <ul>
         <li>
-            <a href="./lab1/exercise0.2/index.html">
-                Exercise 0.2: Appliance Energy Website
+            <a href="./lab2/index.html">
                 <span class="tag">HTML/CSS/JS</span>
             </a>
         </li>
