--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
     <p>Student: <strong>Nguyen Minh Kiet</strong></p>
     <p>Welcome to my assignment repository. Click below to view completed exercises.</p>
 
-    <h2>Lab 1</h2>
+    <h2>Lab 2</h2>
     <ul>
         <li>
-            <a href="./lab1/exercise0.2/index.html">
-                Exercise 0.2: Appliance Energy Website
+            <a href="./lab2/index.html">
                 <span class="tag">HTML/CSS/JS</span>
             </a>
         </li>
